Fixed issue with mvcLoggerConfiguration sample registering multiple SignalR hubs. Fixed table alignment in samples.

--- a/samples/MvcWithDefaultHub/src/wwwroot/css/site.css
+++ b/samples/MvcWithDefaultHub/src/wwwroot/css/site.css
@@ -25,3 +25,11 @@ body {
   margin: 25px;
   text-align: center;
 }
+
+#event-table {
+  width: 100%;
+}
+
+#event-table tr {
+  text-align: center;
+}
